[gd_scene load_steps=34 format=3 uid="uid://dsr3yjl4wnjba"]

[ext_resource type="Script" uid="uid://ddyd0xgiwrfys" path="res://Assets/Scripts/Managers/LevelManager.gd" id="1_i1mc3"]
[ext_resource type="Script" uid="uid://fe5igt3dfey2" path="res://Assets/Scripts/Managers/ResourceManager.gd" id="2_yh4vv"]
[ext_resource type="Script" uid="uid://p5fa6xsppk3f" path="res://Assets/Scripts/Managers/WaveManager.gd" id="3_cqx4t"]
[ext_resource type="Script" uid="uid://ds3m5it8756mk" path="res://Assets/Resources/WaveData.gd" id="4_oe4uc"]
[ext_resource type="Script" uid="uid://0igd8g4yf8ww" path="res://Assets/Resources/Deployment.gd" id="5_gkeqf"]
[ext_resource type="PackedScene" uid="uid://43kchsu37yop" path="res://Assets/Scenes/Enemies/BaseEntity.tscn" id="9_pklxb"]
[ext_resource type="MeshLibrary" uid="uid://dyy33slfjlbhq" path="res://Assets/Models/Tiles.tres" id="12_ooif4"]
[ext_resource type="Script" uid="uid://c8gtchiwo1c1e" path="res://Assets/Scripts/Managers/GridManager.gd" id="13_hcrex"]
[ext_resource type="PackedScene" uid="uid://qq3kxv0itx6w" path="res://Assets/Scenes/Towers/Emitter.tscn" id="14_tip0l"]
[ext_resource type="Script" uid="uid://cx7xp4mh8g2ar" path="res://Assets/Scripts/Towers/Emitter.gd" id="15_8kg8i"]
[ext_resource type="Script" uid="uid://16e5jemtsbm2" path="res://Assets/Scripts/WrathOfHeavens.gd" id="19_2pxej"]

[sub_resource type="Resource" id="Resource_c07d4"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 5
DeployDelay = 1.0
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_qaad7"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_c07d4")])
WaveReward = 10
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_beeig"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 3
DeployDelay = 2.0
EnemyColor = 1
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_8kg8i"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_beeig")])
WaveReward = 10
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_5xxe6"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 10
DeployDelay = 1.0
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_xivig"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 10
DeployDelay = 1.0
PreDeployDelay = 0.5
EnemyColor = 1
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_ntdl1"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_5xxe6"), SubResource("Resource_xivig")])
WaveReward = 10
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_i1mc3"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 5
DeployDelay = 1.0
EnemyColor = 2
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_yh4vv"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_i1mc3")])
WaveReward = 10
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_cqx4t"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 8
DeployDelay = 1.0
EnemyColor = 1
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_oe4uc"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_cqx4t")])
WaveReward = 10
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_gkeqf"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 8
DeployDelay = 1.0
EnemyColor = 2
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_owbbi"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_gkeqf")])
WaveReward = 10
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_hgsli"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 12
DeployDelay = 1.5
EnemyColor = 2
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_0q386"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 12
DeployDelay = 1.5
PreDeployDelay = 0.5
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_r5067"]
script = ExtResource("5_gkeqf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("9_pklxb")
EnemyCount = 12
DeployDelay = 1.5
PreDeployDelay = 1.0
EnemyColor = 1
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_pklxb"]
script = ExtResource("4_oe4uc")
Deployments = Array[ExtResource("5_gkeqf")]([SubResource("Resource_hgsli"), SubResource("Resource_0q386"), SubResource("Resource_r5067")])
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Curve3D" id="Curve3D_nqbn4"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14, 0, 16, 0, 0, 0, 0, 0, 0, 8, 0, 16, 0, 0, 0, 0, 0, 0, 8, 0, 8, 0, 0, 0, 0, 0, 0, -14, 0, 8, 0, 0, 0, 0, 0, 0, -14, 0, 16, 0, 0, 0, 0, 0, 0, -6, 0, 16, 0, 0, 0, 0, 0, 0, -6, 0, 0, 0, 0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 0, 0, 0, 8, 0, -8, 0, 0, 0, 0, 0, 0, -14, 0, -8, 0, 0, 0, 0, 0, 0, -14, 0, -4, 0, 0, 0, 0, 0, 0, -6, 0, -4, 0, 0, 0, 0, 0, 0, -6, 0, -15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 13

[sub_resource type="PlaneMesh" id="PlaneMesh_nyyhf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iw5u7"]
transparency = 1
albedo_color = Color(0, 1, 0, 0.47843137)

[sub_resource type="BoxMesh" id="BoxMesh_rl6do"]
size = Vector3(1.4, 1.4, 1.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cu1tk"]
albedo_color = Color(0.8627451, 0.8627451, 0.8627451, 1)

[node name="LevelManager" type="Node3D"]
script = ExtResource("1_i1mc3")

[node name="ResourceManager" type="Node3D" parent="."]
script = ExtResource("2_yh4vv")
HP = 10

[node name="WaveManager" type="Node3D" parent="."]
script = ExtResource("3_cqx4t")
waves = Array[ExtResource("4_oe4uc")]([SubResource("Resource_qaad7"), SubResource("Resource_8kg8i"), SubResource("Resource_ntdl1"), SubResource("Resource_yh4vv"), SubResource("Resource_oe4uc"), SubResource("Resource_owbbi"), SubResource("Resource_pklxb")])

[node name="WaveDelayTimer" type="Timer" parent="WaveManager"]
one_shot = true

[node name="Path3D" type="Path3D" parent="WaveManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1)
curve = SubResource("Curve3D_nqbn4")

[node name="GridManager" type="GridMap" parent="."]
mesh_library = ExtResource("12_ooif4")
data = {
"cells": PackedInt32Array(7, 8, 2, 6, 8, 2, 5, 8, 2, 4, 8, 2, 4, 7, 2, 4, 6, 2, 4, 5, 2, 4, 4, 2, 3, 4, 2, 2, 4, 2, 1, 4, 2, 0, 4, 2, 65535, 4, 2, 65534, 4, 2, 65533, 4, 2, 65532, 4, 2, 65531, 4, 2, 65530, 4, 2, 65529, 4, 2, 65529, 5, 2, 65529, 6, 2, 65529, 7, 2, 65529, 8, 2, 65530, 8, 2, 65531, 8, 2, 65532, 8, 2, 65533, 8, 2, 65533, 7, 2, 65533, 6, 2, 65533, 5, 2, 65533, 3, 2, 65533, 2, 2, 65533, 1, 2, 65533, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 4, 65535, 2, 4, 65534, 2, 4, 65533, 2, 4, 65532, 2, 3, 65532, 2, 2, 65532, 2, 1, 65532, 2, 0, 65532, 2, 65535, 65532, 2, 65534, 65532, 2, 65533, 65532, 2, 65532, 65532, 2, 65531, 65532, 2, 65530, 65532, 2, 65529, 65532, 2, 65529, 65533, 2, 65529, 65534, 2, 65530, 65534, 2, 65531, 65534, 2, 65532, 65534, 2, 65533, 65534, 2, 65533, 65533, 2, 65533, 65531, 2, 65533, 65530, 2, 65533, 65529, 2, 65532, 9, 1, 65533, 9, 1, 65533, 10, 0, 65534, 9, 1, 65534, 10, 0, 65532, 10, 0, 65531, 10, 0, 65530, 10, 0, 65529, 10, 0, 65528, 10, 0, 65528, 9, 1, 65529, 9, 1, 65530, 9, 1, 65531, 9, 1, 65528, 8, 1, 65528, 7, 1, 65528, 6, 1, 65528, 5, 1, 65527, 10, 0, 65527, 9, 0, 65527, 8, 0, 65527, 7, 0, 65527, 6, 0, 65527, 5, 0, 65527, 4, 0, 65527, 3, 0, 65527, 2, 0, 65527, 1, 0, 65527, 0, 0, 65527, 65535, 0, 65527, 65534, 0, 65527, 65533, 0, 65527, 65532, 0, 65527, 65531, 0, 65527, 65530, 0, 65528, 65530, 0, 65529, 65530, 0, 65530, 65530, 0, 65531, 65530, 0, 65532, 65531, 1, 65532, 65530, 0, 65531, 65531, 1, 65530, 65531, 1, 65528, 65532, 1, 65529, 65531, 1, 65528, 65531, 1, 65528, 65533, 1, 65528, 65534, 1, 65528, 65535, 1, 65528, 0, 0, 65528, 1, 0, 65528, 2, 0, 65528, 3, 1, 65529, 3, 1, 65530, 3, 1, 65531, 3, 1, 65532, 3, 1, 65532, 2, 0, 65532, 1, 1, 65531, 1, 0, 65530, 1, 0, 65530, 2, 0, 65529, 2, 0, 65531, 2, 0, 65529, 1, 0, 65530, 65533, 1, 65531, 65533, 1, 65532, 65533, 1, 1, 65533, 1, 3, 65533, 1, 3, 65534, 1, 3, 65535, 1, 2, 65535, 1, 1, 65535, 1, 0, 65535, 1, 65535, 65535, 1, 65534, 65535, 1, 65533, 65535, 1, 65532, 65535, 1, 65531, 65535, 1, 65530, 65535, 1, 65529, 65535, 1, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 1, 65534, 65534, 1, 65534, 65533, 1, 65535, 65533, 1, 65535, 65534, 0, 0, 65534, 0, 0, 65533, 1, 1, 65534, 0, 2, 65534, 0, 2, 65533, 1, 65532, 6, 1, 65532, 7, 1, 65531, 7, 1, 65530, 7, 1, 65530, 6, 1, 65531, 6, 0, 65532, 5, 1, 65531, 5, 1, 65530, 5, 1, 6, 9, 0, 6, 10, 0, 5, 10, 0, 4, 10, 0, 3, 10, 0, 2, 10, 0, 1, 10, 0, 0, 10, 0, 65535, 10, 0, 65535, 9, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 1, 4, 9, 1, 5, 9, 1, 5, 0, 4, 6, 0, 0, 6, 65535, 0, 5, 65535, 1, 5, 65534, 1, 6, 65534, 0, 5, 65533, 1, 6, 65533, 0, 6, 65532, 0, 5, 65532, 1, 65534, 65530, 0, 65534, 65531, 1, 65535, 65531, 1, 65535, 65530, 0, 0, 65530, 0, 0, 65531, 1, 1, 65531, 1, 2, 65531, 1, 3, 65531, 1, 3, 65530, 0, 4, 65530, 0, 4, 65531, 1, 5, 65531, 1, 5, 65530, 0, 6, 65530, 0, 6, 65531, 0, 6, 1, 0, 6, 2, 0, 6, 3, 0, 6, 4, 0, 6, 5, 0, 6, 6, 0, 6, 7, 0, 5, 7, 1, 5, 6, 1, 5, 5, 1, 5, 4, 1, 5, 3, 1, 5, 2, 0, 5, 1, 1, 4, 1, 1, 4, 2, 0, 3, 2, 0, 2, 2, 0, 1, 2, 0, 0, 2, 0, 65535, 2, 0, 65534, 2, 0, 65534, 3, 1, 65535, 3, 1, 0, 3, 1, 1, 3, 1, 4, 3, 1, 3, 3, 1, 2, 3, 1, 3, 1, 1, 2, 1, 1, 1, 1, 1, 0, 1, 1, 65535, 1, 1, 65534, 1, 1, 65534, 5, 1, 65534, 6, 1, 65534, 7, 1, 65534, 8, 1, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 1, 3, 7, 1, 2, 7, 0, 1, 7, 0, 0, 7, 0, 65535, 7, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 1, 2, 5, 1, 65535, 5, 1, 0, 5, 1, 1, 5, 1, 3, 5, 1, 7, 7, 0, 7, 6, 0, 7, 5, 0, 7, 4, 0, 7, 3, 0, 7, 2, 0, 7, 9, 0, 7, 10, 0, 7, 11, 0, 6, 11, 0, 5, 11, 0, 4, 11, 0, 3, 11, 0, 2, 11, 0, 1, 11, 0, 0, 11, 0, 65535, 11, 0, 65534, 11, 0, 65533, 11, 0, 65532, 11, 0, 65531, 11, 0, 65530, 11, 0, 65529, 11, 0, 65528, 11, 0, 65527, 11, 0, 65526, 11, 0, 65526, 10, 0, 65526, 9, 0, 65526, 8, 0, 65526, 7, 0, 65526, 6, 0, 65526, 5, 0, 65526, 4, 0, 65526, 3, 0, 65526, 2, 0, 65526, 1, 0, 65526, 0, 0, 65526, 65535, 0, 65526, 65534, 0, 65526, 65533, 0, 65526, 65532, 0, 65526, 65531, 0, 65526, 65530, 0, 65526, 65529, 0, 65527, 65529, 0, 65528, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 0, 65529, 0, 1, 65529, 0, 1, 65530, 0, 2, 65530, 0, 2, 65529, 0, 3, 65529, 0, 7, 1, 0, 7, 0, 0, 7, 65535, 0, 7, 65534, 0, 7, 65533, 0, 7, 65532, 0, 7, 65531, 0, 7, 65530, 0, 7, 65529, 0, 4, 65529, 0, 6, 65529, 0, 5, 65529, 0, 65528, 4, 4)
}
script = ExtResource("13_hcrex")

[node name="TileHighlight" type="MeshInstance3D" parent="GridManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
mesh = SubResource("PlaneMesh_nyyhf")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_iw5u7")

[node name="Emitter" type="MeshInstance3D" parent="GridManager" instance=ExtResource("14_tip0l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1.7, 9)
mesh = SubResource("BoxMesh_rl6do")
surface_material_override/0 = SubResource("StandardMaterial3D_cu1tk")
script = ExtResource("15_8kg8i")
intensity = 12.0
availableColors = Array[int]([0, 1, 2])

[node name="Emitter2" type="MeshInstance3D" parent="GridManager" instance=ExtResource("14_tip0l")]
transform = Transform3D(-0.70710677, 0, 0.70710677, 0, 1, 0, -0.70710677, 0, -0.70710677, 11, 1.7, 1)
mesh = SubResource("BoxMesh_rl6do")
surface_material_override/0 = SubResource("StandardMaterial3D_cu1tk")
script = ExtResource("15_8kg8i")
color = 1
intensity = 12.0
availableColors = Array[int]([0, 1, 2])

[node name="WrathOfHeavens" type="Node3D" parent="."]
script = ExtResource("19_2pxej")
